fixed clipping of search bar

--- a/ultrastar-wingman/frontend/src/components/SongDetailsModal.css
+++ b/ultrastar-wingman/frontend/src/components/SongDetailsModal.css
@@ -4,7 +4,7 @@
     left: 0;
     width: 100vw;
     height: 100vh;
-    z-index: 100;
+    z-index: 500;
     background: rgba(36, 42, 50, 0.8); /* Milky glass effect */
     backdrop-filter: blur(8px); /* Blur effect for the background */
     display: flex;
